<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="introduction">My Nanodegree App!</string>
    <string name="button_1">SPOTIFY STREAMER</string>
    <string name="button_2">SCORES APP</string>
    <string name="button_3">LIBRARY APP</string>
    <string name="button_4">BUILD IT BIGGER</string>
    <string name="button_5">XYZ READER</string>
    <string name="button_6">CAPSTONE:MY OWN APP</string>
    <string name="open_app">This button will launch my </string>
</resources>
