<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sanket.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/linearLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="25sp"
        android:text="@string/introduction"
        android:layout_gravity="center"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/buttonColor_1"
        android:text="@string/button_1"
        android:onClick="displayToast"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@color/buttonColor_1"
        android:text="@string/button_2"
        android:onClick="displayToast"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@color/buttonColor_1"
        android:text="@string/button_3"
        android:onClick="displayToast"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@color/buttonColor_1"
        android:text="@string/button_4"
        android:onClick="displayToast"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@color/buttonColor_1"
        android:text="@string/button_5"
        android:onClick="displayToast"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@color/buttonColor_2"
        android:textColor="#ffffff"
        android:onClick="displayToast"
        android:text="@string/button_6"
        android:layout_gravity="center"/>

</LinearLayout>
